# subtitle-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
apidocs/source/: conf.py
docs/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  subtitle_analyzer.html
docs/_sources/: index.rst.txt  subtitle_analyzer.rst.txt
subtitle_analyzer/: __init__.py  empty.srt  entry.py  lib.py  phrase_analyzer.py  phrase_ass_writer.py  tbr.py  vocab_analyzer.py  vocab_ass_writer.py
tests/: test_subtitle_analyzer.py
