[tool.poetry]
name = "subtitle-analyzer"
version = "0.1.4"
description = ""
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
repository = "https://github.com/qishe-nlp/subtitle-analyzer"
readme = "README.md"
documentation = "https://qishe-nlp.github.io/subtitle-analyzer/"
keywords = ["vocabulary", "phrases", "subtitle", "nlp"] 


[tool.poetry.dependencies]
python = "^3.8"
subtitlecore = "^0.1.9"
click = "^7.1.2"
x2cdict = "^0.1.40"
pysubs2 = "^1.1.0"
sencore = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.scripts]
sta_vocab = "subtitle_analyzer.entry:subtitle_vocab"
sta_phrase = "subtitle_analyzer.entry:subtitle_phrase"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
