[tool.poetry]
name = "subtitle-analyzer"
version = "0.1.14"
description = ""
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
repository = "https://github.com/qishe-nlp/subtitle-analyzer"
readme = "README.md"
documentation = "https://qishe-nlp.github.io/subtitle-analyzer/"
keywords = ["vocabulary", "phrases", "subtitle", "nlp"] 


[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pysubs2 = "^1.1.0"
subtitlecore = "^0.1.11"
sencore = "^0.1.28"
x2cdict = "^0.1.42"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.scripts]
sta_vocab = "subtitle_analyzer.entry:subtitle_vocab"
sta_phrase = "subtitle_analyzer.entry:subtitle_phrase"

tbr_phrase = "subtitle_analyzer.tbr:subtitle_phrase"
sta_reviewed_phrase = "subtitle_analyzer.tbr: gen_phrase_ass"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
